--- a/style.css
+++ b/style.css
@@ -182,6 +182,32 @@ input {
     background-color: #005c6e; /* Adjust this color for hover state if needed */
 }
 
+/* New Botton */
+
+.submit-images {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+#submit-btn {
+    border: none;
+    background-color: #007293; 
+    color: #ffffff;
+    font-size: 16px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: rgb(38, 57, 77) 0 20px 30px -10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#submit-btn:hover {
+    background-color: #005c6e; 
+}
+
 .loader {
     display: none;
     width: 50px;
@@ -208,6 +234,7 @@ input {
         margin-left: 30px;  
         margin-right: 30px; 
         justify-content: center;
+    }
 }
 
 /* Mobile Styles */
